2025-07-05T00:54:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16082914083 # 695
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-05
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 559 952 / 572 965
* notice: next accum: outdated-unq outdated-all / unq all: 560 953 / 573 966
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-20] / [2025-07-04]

2025-07-04T00:57:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16063449877 # 694
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-04
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 558 951 / 570 963
* notice: next accum: outdated-unq outdated-all / unq all: 559 952 / 572 965
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-06-19] / [2025-07-03]

2025-07-03T00:57:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16039059396 # 693
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-03
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 557 950 / 570 963
* notice: next accum: outdated-unq outdated-all / unq all: 558 951 / 570 963
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-06-18] / []

2025-07-02T00:57:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16013539378 # 692