@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-07-05T00:54:53Z",
-  "count_outdated" : 953,
-  "uniques_outdated" : 560,
+  "timestamp" : "2025-07-06T01:02:42Z",
+  "count_outdated" : 955,
+  "uniques_outdated" : 562,
   "count" : 966,
   "uniques" : 573,
   "clones" : [
-    {
-      "timestamp": "2025-06-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
-      "timestamp": "2025-06-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-24T00:00:00Z",
       "count": 1,
