@@ -1,17 +1,7 @@
 {
-  "count": 13,
+  "count": 11,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-06-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-06-22T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-06-24T00:00:00Z",
       "count": 1,
