@@ -1,3 +1,12 @@
+2025-07-06T01:02:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16093752403 # 696
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-06
+* notice: last 14d: unq all: 5 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 560 953 / 573 966
+* notice: next accum: outdated-unq outdated-all / unq all: 562 955 / 573 966
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-06-21 2025-06-22] / []
+
 2025-07-05T00:54:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16082914083 # 695
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-05
